<resources>
    <string name="app_name">Talku-Talku</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up"> Sign Up</string>
    <string name="username"> Username</string>
    <string name="email"> Email</string>
    <string name="password"> Password </string>
    <string name="confirm_pass"> Confirm Password</string>
    <string name="facebook"> Facebook</string>
    <string name="google"> Google</string>
    <string name="forgot_pass"> Forgot Password?</string>
    <string name="categories"> Categories</string>
    <string name="profile"> Profile</string>
    <string name="settings"> Settings</string>
    <string name="your_profile"> Your Profile</string>
    <string name="submit"> Submit</string>
    <string name="forgot_password"> Forgot Password</string>
</resources>