<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:text="@string/sign_in"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        android:layout_marginTop="10dp"
        android:background="@drawable/relative_background">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/email"
            android:background="@drawable/edit_background"
            android:hint="@string/password"
            android:inputType="text"
            android:textSize="15sp"
            android:padding="12dp"
            android:drawableEnd="@drawable/ic_eye"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/password"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/sign_up_button"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/facebook_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/sign_in_button"
            android:layout_marginTop="18dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/facebook"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:drawableStart="@drawable/facebook_icon"
            android:layout_marginStart="25dp"
            android:background="@drawable/facebook_background"
            android:layout_marginEnd="25dp"/>

        <Button
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/facebook_button"
            android:layout_marginTop="18dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/google"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:drawableStart="@drawable/google_icon"
            android:layout_marginStart="25dp"
            android:background="@drawable/google_background"
            android:layout_marginEnd="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_below="@id/google_button"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/forgot_pass"
            />









    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>