<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="normal"
        android:text="@string/forgot_password"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp"
        android:layout_marginTop="20dp"
        android:background="@drawable/relative_background">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/edit_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:padding="12dp"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_below="@id/email"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_background"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/submit"
            android:textAllCaps="false"/>


        </RelativeLayout>






</androidx.constraintlayout.widget.ConstraintLayout>